<resources>

    <string name="app_name">传真机</string>
    <string name="label">qingzhi-net</string>
    <string name="ui_activity_title">登陆</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_rect_photo">传真机</string>
    <string name="new_fax">new</string>
    <string name="receiver_desc">收件人信息</string>
    <string name="input_receiver_desc">请输入收件人姓名</string>
    <string name="sent_time">发送时间</string>
    <string name="sent_result">发送结果</string>
    <string name="input_fax_number">请输入传真号码</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="fax_list_type">
        <item>收件箱</item>
        <item>发件箱</item>
        <item>草稿箱</item>
    </string-array>


    <string name="login_activity_username_label">用户名</string>
    <string name="login_activity_enterprise_label">企业</string>
    <!-- Label above password EditText -->
    <string name="login_activity_password_label">密码</string>
    <string name="login_activity_ok_button">Sign in</string>
    <string name="login_activity_loginfail_text_enmissing">输入企业名称.</string>
    <string name="login_activity_newaccount_text">输入你的账号.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter
        account is required. Please try again.
    </string>

    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.
    </string>

    <!-- Message shown in progress dialog while app connects to the server -->
    <string name="ui_activity_authenticating">Authenticating\u2026</string>

</resources>